--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <version>1.4.200</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
+
     </dependencies>
 
 </project>
